revamped whole project to mimic medium blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-title: Miata Roadtrip - A Photo Blog
-email: youremail@domain.com
+title: Dan's Medium Knock-off Blog
+email: dansfakeemail@gmail.com
